{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 378,
  "lineage": "10aef3c2-46de-de51-ab28-1db321424d90",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-10T12:30:37.662-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/central-list-413121/global/firewalls/dany-default-allow-ssh-http",
            "log_config": [],
            "name": "dany-default-allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network",
            "priority": 1000,
            "project": "central-list-413121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/firewalls/dany-default-allow-ssh-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-10T12:30:49.815-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/central-list-413121/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network",
            "priority": 1000,
            "project": "central-list-413121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hashicat",
            "google_compute_subnetwork.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240208",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/central-list-413121/zones/us-central1-a/disks/production"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "name": "hashicat-1"
            },
            "enable_display": false,
            "id": "projects/central-list-413121/zones/us-central1-a/instances/production",
            "instance_id": "7055757901757571605",
            "label_fingerprint": "RS3yrNo9q7w=",
            "labels": {
              "name": "hashicat-1"
            },
            "machine_type": "n2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINyxo0BV1t5WS8MTRD3HtbJlIl5RNGfXxLA3FfauM3yQ terraform"
            },
            "metadata_fingerprint": "DZ_KAPIyf20=",
            "name": "production",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.41.46.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/central-list-413121/regions/us-central1/subnetworks/dany-subnet",
                "subnetwork_project": "central-list-413121"
              }
            ],
            "project": "central-list-413121",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/zones/us-central1-a/instances/production",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "name": "hashicat-1"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.hashicat",
            "google_compute_subnetwork.hashicat",
            "tls_private_key.ssh-key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240208",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/central-list-413121/zones/us-central1-a/disks/worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "name": "hashicat-2"
            },
            "enable_display": false,
            "id": "projects/central-list-413121/zones/us-central1-a/instances/worker",
            "instance_id": "6252297051139891733",
            "label_fingerprint": "qAIovk7U78Q=",
            "labels": {
              "name": "hashicat-2"
            },
            "machine_type": "n2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINyxo0BV1t5WS8MTRD3HtbJlIl5RNGfXxLA3FfauM3yQ terraform"
            },
            "metadata_fingerprint": "DZ_KAPIyf20=",
            "name": "worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.224.67.185",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/central-list-413121/regions/us-central1/subnetworks/dany-subnet",
                "subnetwork_project": "central-list-413121"
              }
            ],
            "project": "central-list-413121",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/zones/us-central1-a/instances/worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "name": "hashicat-2"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.hashicat",
            "google_compute_subnetwork.hashicat",
            "tls_private_key.ssh-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/central-list-413121/global/networks/hashicat-network",
            "mtu": 0,
            "name": "hashicat-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8917874937539748408",
            "project": "central-list-413121",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-10T12:30:38.024-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/central-list-413121/regions/us-central1/subnetworks/dany-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "dany-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/central-list-413121/global/networks/hashicat-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "central-list-413121",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-list-413121/regions/us-central1/subnetworks/dany-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.hashicat"
          ]
        }
      ]
    }
  ]
}